--- a/surveyForm.html
+++ b/surveyForm.html
@@ -9,7 +9,13 @@
     <p id="description">Please fill out this form with the required information</p>
     <form id="survey-form">
       <fieldset>
-        
+        <label for="name-label"><input id="name" type="text" placeholder="Fill your name"></label>
+        <label for="email-label"><input id="email" type="email" placeholder="Fill your email address"></label>
+        <label for="number-label"><input id="number" type="number" min="7" max="11" placeholder="Fill your number"></label>
+        <label>
+          <select id="dropdown">
+          </select>
+        </label>
       </fieldset>
     </form>
   </body>
