--- a/surveyForm.html
+++ b/surveyForm.html
@@ -22,20 +22,24 @@
             <option value="2">Single</option>
           </select>
         </label>
+        <label>Your sex: 
+        </labeL>
         <label for="male">
-          <input id="male" type="radio" name="sex"> Male
+          <input id="male" type="radio" name="sex" class="inline"> Male
         </label>
         <label for="female">
-          <input id="female" type="radio" name="sex"> Female
+          <input id="female" type="radio" name="sex" class="inline"> Female
         </label>
-        <label for="cat">Do you have a pet? 
-          <input id="cat" type="checkbox" name="pet"> Cat
+        <label>Your pet: 
+        </label>
+        <label for="cat"> 
+          <input id="cat" type="checkbox" name="pet" class="inline"> Cat
         </label>
         <label for="dog">
-          <input id="dog" type="checkbox" name="pet"> Dog
+          <input id="dog" type="checkbox" name="pet" class="inline"> Dog
         </label>
         <label for="none">
-          <input id="none" type="checkbox" name="pet"> None
+          <input id="none" type="checkbox" name="pet" class="inline"> None
         </label>
       </fieldset>
       <fieldset>
