--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,23 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./new5.js">
-
-    </script>
+    <script src="./new6.js"></script>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./hw2.js">
-
-    </script>
-</body>
->>>>>>> c75968bf4b2a274d4a966a13c1b38ddd8ea368c6
 </html>
